[package]
name = "embassy-arduino-nano-33-blink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-nrf = { version = "0.2.0", features = ["nrf52840", "time-driver-rtc1"] }
embassy-time = { version = "0.3.2", features = ["defmt-timestamp-uptime"] }
embedded-hal = { version = "1.0" }

[profile.release]
debug = 2
